added style to exam view; add patient to exam new and edit controller; added link to new exam on patient show.

--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -15,6 +15,9 @@
   <%= @patient.address %>
 </p>
 
+<p>
+  <%= link_to 'New Exam', new_patient_exam_path(@patient) %>
+</p>
 
 <%= link_to 'Edit', edit_patient_path(@patient) %> |
 <%= link_to 'Back', patients_path %>
