--- a/app/views/exams/_form.html.erb
+++ b/app/views/exams/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@exam) do |f| %>
+<%= form_for [@patient, @exam] do |f| %>
   <% if @exam.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@exam.errors.count, "error") %> prohibited this exam from being saved:</h2>
