--- a/app/views/exams/show.html.erb
+++ b/app/views/exams/show.html.erb
@@ -11,5 +11,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_exam_path(@exam) %> |
-<%= link_to 'Back', exams_path %>
+<%= link_to 'Edit', edit_patient_exam_path(@patient, @exam) %> |
+<%= link_to 'Back', patient_path(@patient) %>
