--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,7 +64,7 @@
         </div><!--/row-->
 
       <footer>
-        <p>&copy; Synapse Company 2013</p>
+        <p>&copy; Synapse 2013</p>
       </footer>
 
     </div> <!-- /container -->
