--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= content_for?(:title) ? yield(:title) : "AgendaFisio" %></title>
     <%= csrf_meta_tags %>
-
+    <%= javascript_include_tag 'jquery-1.10.1.min.js', 'application' %>
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
       <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
@@ -47,8 +47,8 @@
           <a class="brand" href="/">AgendaFisio</a>
           <div class="container nav-collapse">
             <ul class="nav">
-              <li><%= link_to 'Patients', patient_path  %></li>
-              <li><%= link_to 'Exams', exams_path  %></li>
+              <li><%= link_to "Appointments", appointments_path %></li>
+              <li><%= link_to "Patients", patients_path  %></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -61,12 +61,13 @@
             <%= bootstrap_flash %>
             <%= yield %>
           </div>
+          <div class="span3">
+          </div><!--/span-->
         </div><!--/row-->
 
       <footer>
         <p>&copy; Synapse 2013</p>
       </footer>
-
     </div> <!-- /container -->
 
     <!-- Javascripts
