--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,6 +47,13 @@
           <a class="brand" href="/">AgendaFisio</a>
           <div class="container nav-collapse">
             <ul class="nav">
+              <% if user_signed_in? %>
+                  <li><%= link_to current_user.email, edit_user_registration_path %></li>
+                  <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
+              <% else %>
+                  <li><%= link_to "Sign Up", new_user_registration_path %></li>
+                  <li><%= link_to "Log In", new_user_session_path %></li>
+              <% end %>
               <li><%= link_to "Appointments", appointments_path %></li>
               <li><%= link_to "Patients", patients_path  %></li>
             </ul>
